# dot-claude

./: .gitignore  .lintstagedrc.js  .mcp.json  .mdformat.toml  .prettierignore  .prettierrc.yml  CLAUDE.md  README.md  justfile  keybindings.json  package.json  pyproject.toml  pyrightconfig.json  ruff.toml  settings.json  utils.sh
.husky/: pre-commit
agents/: ai-docs-fetcher.md  ai-docs-finder.md  code-reviewer.md  code-simplifier.md  debugger.md  docs-finder.md  prompt-refiner.md  tool-finder.md  typescript-engineer.md  web3-backend-engineer.md  worker.md
commands/: bump-release.md  code-polish.md  commit.md  create-agent-context.md  create-biome-discussion.md  create-cc-issue.md  create-codex-issue.md  create-command.md  create-discussion.md  create-issue.md  create-pr.md  create-slash-command.md  create-task.md  fix-issue.md  generate-issue-hierarchy.md  init-context.md  issue-hierarchy.md  lint-check.md  lint-check.py  lint-context.md  lint-files.md  my-activity.md  refine-prompt.md  rename-work-dir.md  spec-screenshot.md  summarize-my-activity.md  summarize-prompts.md  sync-repos.md  task-create.md  task-update.md  update-context.md  update-deps.md  update-md-docs.md  update-pr.md  update-readme.md  update-task.md  validate-context.md
context/: AGENT_COORDINATION.md  CRITICAL_THINKING.md  GIT.md  MODERN_CLI.md  SENIOR_PROGRAMMER.md  STAY_SCOPED.md
dot_claude.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
helpers/: .coverage  allow_all_bash.py  allow_all_bash_test.py  cleanup.py  cleanup_test.py  get_macos_version.sh  manage-claude-island.py  (+10 more)
(+238 files in other folders)
