[project]
  dependencies = [
    "pytest",
    "pyright",
    "ruff",
  ]
  description = "Root .claude directory."
  name = "dot-claude"
  requires-python = ">=3.12"
  version = "1.0.0"

[dependency-groups]
  dev = [
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-clarity>=1.0.1",
]
