[project]
  dependencies = [
    "mdformat",
    "mdformat-frontmatter",
    "mdformat-gfm",
    "pytest",
    "pyright",
    "ruff",
  ]
  description = "Root .claude directory."
  name = "dot-claude"
  requires-python = ">=3.13"
  version = "1.0.0"

[dependency-groups]
  dev = [
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-clarity>=1.0.1",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-md>=0.2.0",
]
